--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,16 +1,11 @@
 .Footer {
-  width: 100%;
-  padding: 0 20px;
-
   &-content {
     /* border-top: solid 1px rgba(0, 0, 0, .14); */
-    max-width: 1020px;
-    margin: 0 auto;
-    padding: 38px 0;
+    padding-top: 38px;
+    padding-bottom: 38px;
   }
 
   &-copyright {
-    color: #212121;
     font-size: 13px;
     text-align: right;
     margin: 0;
